<?xml version="1.0"?>
<package format="3">
  <name>chibi24_a_launch</name>
  <version>0.0.0</version>
  <description>The chibi24_a_launch  package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ament_cmake_auto</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>