<?xml version="1.0"?>
<package format="3">
  <name>obstacle_detector_a</name>
  <version>0.0.0</version>
  <description>The obstacle_detector_a package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <!-- <depend>rclcpp_components</depend> -->
  <depend>roomba_500driver_meiji</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>